Adding lit as dependency Importing/installing bit components

--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@luixaviles/demo-lit.ui.button": "0.0.1",
+    "@luixaviles/demo-lit.ui.card": "0.0.1",
+    "@luixaviles/demo-lit.ui.card-actions": "0.0.1",
+    "@luixaviles/demo-lit.ui.card-content": "0.0.1",
+    "@luixaviles/demo-lit.ui.card-title": "0.0.1",
+    "@webcomponents/webcomponentsjs": "^2.6.0",
+    "lit": "^2.0.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
